corrigindo arquivo de configurações do sonar #30

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectName=academic-devflow
 # This property is optional if sonar.modules is set.
 sonar.sources=.
 sonar.sources.inclusions=**/**.py
-sonar.exclusions=**/tests/**, docs/**, sigarte/**, **/static/**, **/templates/**, **/migrations/**, **/__pycache__/**, **/admin.py, **/__init__.*, manage.py
+sonar.exclusions=**/tests/**, docs/**, academicDevflow/**, **/static/**, **/templates/**, **/migrations/**, **/__pycache__/**, **/admin.py, **/__init__.*, manage.py
 
 # Language
 sonar.language=py
