--- a/.github/workflows/run_django_tests.yml
+++ b/.github/workflows/run_django_tests.yml
@@ -13,7 +13,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        firefox: ['latest']
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v3
@@ -25,6 +26,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Setup Firefox for Selenium tests
+      uses: browser-actions/setup-firefox@latest
+      with:
+        firefox-version: ${{ matrix.firefox }}
     - name: Run Tests
       run: |
         python manage.py test
